--- a/app.json
+++ b/app.json
@@ -26,7 +26,8 @@
       "edgeToEdgeEnabled": true,
       "splash": {
         "image": "./assets/images/splash.png"
-      }
+      },
+      "package": "com.cpawl89.sinkplane"
     },
     "ios": {
       "splash": {
