--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@tanstack/react-query": "^5.90.5",
     "expo": "^54.0.1",
     "expo-build-properties": "~1.0.7",
     "expo-font": "~14.0.7",
