--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
       "expo-router",
       "expo-font",
       "expo-build-properties",
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-secure-store"
     ],
     "android": {
       "edgeToEdgeEnabled": true,
