--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-font": "~14.0.7",
     "expo-linking": "~8.0.7",
     "expo-router": "~6.0.0",
+    "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.8",
     "expo-status-bar": "~3.0.7",
     "expo-system-ui": "~6.0.7",
@@ -33,9 +34,11 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "~0.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@react-native-tvos/config-tv": "^0.1.4",
     "@types/react": "~19.1.10",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
