--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
+    "eas-build-pre-install": "npm config set legacy-peer-deps true",
     "start": "EXPO_TV=1 expo start",
     "android": "EXPO_TV=1 expo run:android",
     "ios": "EXPO_TV=1 expo run:ios",
@@ -18,6 +19,8 @@
     "@tanstack/react-query": "^5.90.5",
     "expo": "^54.0.1",
     "expo-build-properties": "~1.0.7",
+    "expo-crypto": "~15.0.7",
+    "expo-device": "~8.0.9",
     "expo-font": "~14.0.7",
     "expo-linking": "~8.0.7",
     "expo-router": "~6.0.0",
@@ -30,16 +33,21 @@
     "react-dom": "19.1.0",
     "react-native": "npm:react-native-tvos@0.81.4-0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-network-info": "^5.2.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-tcp-socket": "^6.3.0",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "~0.5.0"
+    "react-native-worklets": "~0.5.0",
+    "react-native-zeroconf": "^0.13.8",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
     "@react-native-tvos/config-tv": "^0.1.4",
     "@types/react": "~19.1.10",
+    "@types/react-native-zeroconf": "^0.13.1",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
     "eslint": "^8.57.0",
