--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-tcp-socket": "^6.3.0",
+    "react-native-video": "^6.17.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "~0.5.0",
     "react-native-zeroconf": "^0.13.8",
