--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@mux/mux-data-react-native-video": "^0.19.4",
     "@tanstack/react-query": "^5.90.5",
     "expo": "^54.0.1",
     "expo-build-properties": "~1.0.7",
