wip companion auth

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.7",
     "expo-linking": "~8.0.7",
+    "expo-network": "~8.0.7",
     "expo-router": "~6.0.0",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.8",
@@ -69,7 +70,7 @@
       "npx prettier --write"
     ],
     "*.{json,css,md}": [
-    "npx prettier --write"
+      "npx prettier --write"
     ]
   },
   "expo": {
