--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@mux/mux-data-react-native-video": "^0.19.4",
+    "@react-native-cookies/cookies": "^6.2.1",
     "@tanstack/react-query": "^5.90.5",
     "expo": "^54.0.1",
     "expo-build-properties": "~1.0.7",
